fix: Black-box testing is finished. No error is found.

--- a/src/textGraph/.gitignore
+++ b/src/textGraph/.gitignore
@@ -17,3 +17,9 @@
 /MediumWindow.class
 /TextGraph$1.class
 /TextGraph.class
+/TestCase1.class
+/TestFeatures.class
+/TestQNBW.class
+/TestQBW.class
+/TestGBW.class
+/TestGNT.class
